user management: fix alignment issue between lazy panels

--- a/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/login/LoginPanel.css
+++ b/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/login/LoginPanel.css
@@ -1,12 +1,3 @@
-.topRight {
-    /* fixed within viewport */
-    position: fixed;
-
-    /* set position */
-    top: 0px;
-    right: 0px;
-}
-
 .labelText {
     font-family: Arial, Sans-serif;
     color: #000000;
@@ -39,14 +30,4 @@
     margin: 0 5px;
     padding: 3px;
     width: 100px;
-}
-
-.background {
-    background-color: #F8F8F8;
-    border: 1px none transparent;
-    color: #000000;
-    font-size: 11px;
-    margin-left: -8px;
-    margin-top: 5px;
-    padding: 6px;
 }
