--- a/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/signedUser/SignedInPanel.css
+++ b/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/signedUser/SignedInPanel.css
@@ -1,13 +1,3 @@
-.background {
-    background-color: #F8F8F8;
-    border: 1px none transparent;
-    color: #000000;
-    font-size: 11px;
-    margin-left: -8px;
-    margin-top: 5px;
-    padding: 6px;
-}
-
 .salutationText {
     font-family: Arial, Sans-serif;
     color: #000000;
